--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -50,22 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Code Here\n",
     "for num in range(0,11):\n",
@@ -83,20 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Code in this cell\n",
     "list = [x for x in range(1,51) if x%3 == 0]\n",
@@ -113,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,25 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "word : even!\n",
-      "in : even!\n",
-      "this : even!\n",
-      "sentence : even!\n",
-      "that : even!\n",
-      "an : even!\n",
-      "even : even!\n",
-      "number : even!\n",
-      "of : even!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Code in this cell\n",
     "splitStr = st.split()\n",
@@ -159,116 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3 : Fizz\n",
-      "4\n",
-      "5 : Buzz\n",
-      "6 : Fizz\n",
-      "7\n",
-      "8\n",
-      "9 : Fizz\n",
-      "10 : Buzz\n",
-      "11\n",
-      "12 : Fizz\n",
-      "13\n",
-      "14\n",
-      "15 : FizzBuzz\n",
-      "16\n",
-      "17\n",
-      "18 : Fizz\n",
-      "19\n",
-      "20 : Buzz\n",
-      "21 : Fizz\n",
-      "22\n",
-      "23\n",
-      "24 : Fizz\n",
-      "25 : Buzz\n",
-      "26\n",
-      "27 : Fizz\n",
-      "28\n",
-      "29\n",
-      "30 : FizzBuzz\n",
-      "31\n",
-      "32\n",
-      "33 : Fizz\n",
-      "34\n",
-      "35 : Buzz\n",
-      "36 : Fizz\n",
-      "37\n",
-      "38\n",
-      "39 : Fizz\n",
-      "40 : Buzz\n",
-      "41\n",
-      "42 : Fizz\n",
-      "43\n",
-      "44\n",
-      "45 : FizzBuzz\n",
-      "46\n",
-      "47\n",
-      "48 : Fizz\n",
-      "49\n",
-      "50 : Buzz\n",
-      "51 : Fizz\n",
-      "52\n",
-      "53\n",
-      "54 : Fizz\n",
-      "55 : Buzz\n",
-      "56\n",
-      "57 : Fizz\n",
-      "58\n",
-      "59\n",
-      "60 : FizzBuzz\n",
-      "61\n",
-      "62\n",
-      "63 : Fizz\n",
-      "64\n",
-      "65 : Buzz\n",
-      "66 : Fizz\n",
-      "67\n",
-      "68\n",
-      "69 : Fizz\n",
-      "70 : Buzz\n",
-      "71\n",
-      "72 : Fizz\n",
-      "73\n",
-      "74\n",
-      "75 : FizzBuzz\n",
-      "76\n",
-      "77\n",
-      "78 : Fizz\n",
-      "79\n",
-      "80 : Buzz\n",
-      "81 : Fizz\n",
-      "82\n",
-      "83\n",
-      "84 : Fizz\n",
-      "85 : Buzz\n",
-      "86\n",
-      "87 : Fizz\n",
-      "88\n",
-      "89\n",
-      "90 : FizzBuzz\n",
-      "91\n",
-      "92\n",
-      "93 : Fizz\n",
-      "94\n",
-      "95 : Buzz\n",
-      "96 : Fizz\n",
-      "97\n",
-      "98\n",
-      "99 : Fizz\n",
-      "100 : Buzz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Code in this cell\n",
     "for num in range(1, 101):\n",
@@ -293,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,21 +155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C', 'r', 'e', 'a', 't', 'e', ' ', 'a', ' ', 'l', 'i', 's', 't', ' ', 'o', 'f', ' ', 't', 'h', 'e', ' ', 'f', 'i', 'r', 's', 't', ' ', 'l', 'e', 't', 't', 'e', 'r', 's', ' ', 'o', 'f', ' ', 'e', 'v', 'e', 'r', 'y', ' ', 'w', 'o', 'r', 'd', ' ', 'i', 'n', ' ', 't', 'h', 'i', 's', ' ', 's', 't', 'r', 'i', 'n', 'g']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Code in this cell\n",
-    "ls = [word for word in st]\n",
-    "print(ls)"
+    "#subli = st.split()\n",
+    "\n",
+    "li = [word[0] for word in st.split()]\n",
+    "li"
    ]
   },
   {
