done chapter 03 > lecture 07

--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -880,24 +880,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
+    "    count = 0\n",
+    "    \n",
+    "    for checked_num in range(2, num+1):\n",
+    "        uoc_count = 0\n",
+    "        for i in range(1, checked_num+1):\n",
+    "            if checked_num%i==0:\n",
+    "                uoc_count = uoc_count + 1\n",
+    "        \n",
+    "        if uoc_count==2:\n",
+    "            count = count + 1\n",
+    "            print(checked_num)\n",
+    "    \n",
+    "    return count\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
