--- a/05-Object Oriented Programming/01-Object Oriented Programming.ipynb
+++ b/05-Object Oriented Programming/01-Object Oriented Programming.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lst = [1,2,3]"
@@ -159,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Dog:\n",
@@ -244,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Dog:\n",
@@ -260,7 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sam = Dog('Lab','Sam')"
@@ -415,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Animal:\n",
@@ -701,8 +711,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Book:\n",
@@ -724,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -732,6 +744,7 @@
      "output_type": "stream",
      "text": [
       "A book is created\n",
+      "A book is destroyed\n",
       "Title: Python Rocks!, author: Jose Portilla, pages: 159\n",
       "159\n",
       "A book is destroyed\n"
@@ -784,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
