--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -23,17 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    def __init__(self, owner, balance):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        return \"Deposit Accepted\"\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance>=amount:\n",
+    "            self.balance -= amount\n",
+    "            return \"Withdrawal accepted\"\n",
+    "        return \"Funds Unavailable\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,26 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
-     ]
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Print the object\n",
-    "print(acct1)"
+    "acct1.owner\n",
+    "acct1.balance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +88,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +109,7 @@
        "100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,33 +121,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deposit Accepted\n"
-     ]
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5. Make a series of deposits and withdrawals\n",
-    "acct1.deposit(50)"
+    "acct1.deposit(50)\n",
+    "acct1.balance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Withdrawal Accepted\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Withdrawal accepted'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,15 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Funds Unavailable!\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Funds Unavailable'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -179,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
